# TinyVU

./: .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  README.md  build_linux.sh  build_macos.zsh  build_windows.ps1  installer.iss  tinyvu-dev.pfx  update_version.ps1
build-linux/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
build-linux/JUCE/: JUCEExportConfig.cmake  cmake_install.cmake
build-linux/JUCE/modules/: cmake_install.cmake
build-linux/JUCE/tools/: .ninja_deps  .ninja_log  CMakeCache.txt  JUCEExportConfig.cmake  JUCEToolsExport.cmake  build.ninja  cmake_install.cmake
build-linux/clap-juce-extensions/: cmake_install.cmake
build-linux/clap-juce-extensions/clapjuceext_clap/: CTestTestfile.cmake  cmake_install.cmake
build-linux/plugin/: TinyVU_vst3_helper  Version.h  cmake_install.cmake
cmake/: Version.cmake
docs/: AAX_DEVELOPER_BUILD_GUIDE.md  AAX_LICENSE_REQUEST_EMAIL.md  AAX_SDK_README.md  AAX_SIGNING_GUIDE.md
plugin/: CMakeLists.txt
plugin/src/: KeyEventForwarder.cpp  KeyEventForwarder.h  KeyEventForwarder_mac.mm  ParameterIDs.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  Version.h.in
plugin/src/dsp/: VuMeter.cpp  VuMeter.h
scripts/: AAX_SIGNING_README.md  update_version.ps1
wasm/: CMakeLists.txt
wasm/src/: vu_meter.h  wasm_exports.cpp
webui/: .firebaserc  eslint.config.js  index.html  index.web.html  package-lock.json  package.json  vite.config.web.ts
webui/scripts/: sync-web-demos.cjs
webui/src/: App.css  App.tsx  main.tsx  version.ts  vite-env.d.ts
(+35 files in other folders)
